[package]
name = "ooproxy"
version = "0.1.0"
authors = ["iamwwc <qaq1362211689@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "2.33.3", features = ["yaml"]}
env_logger = "0.8.3"
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = "0.19"
log = "0.4"
backtrace = "0.3"